--- a/consecutivescroller/build.gradle
+++ b/consecutivescroller/build.gradle
@@ -3,12 +3,10 @@ apply plugin: 'com.android.library'
 group='com.github.donkingliang' // 指定group，com.github.<用户名>
 
 android {
-    compileSdkVersion 30
+    compileSdkVersion 36
     defaultConfig {
-        minSdkVersion 19
+        minSdkVersion 21
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -20,6 +18,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.donkingliang.consecutivescroller'
 
 }
 
@@ -28,28 +27,4 @@ dependencies {
     compileOnly 'androidx.appcompat:appcompat:1.3.1'
     compileOnly 'androidx.recyclerview:recyclerview:1.2.1'
     compileOnly 'androidx.viewpager2:viewpager2:1.1.0-alpha01'
-}
-
-//---------------------------------------------
-
-// 指定编码
-tasks.withType(JavaCompile) {
-    options.encoding = "UTF-8"
-}
-
-// 打包源码
-task sourcesJar(type: Jar) {
-    from android.sourceSets.main.java.srcDirs
-    classifier = 'sources'
-}
-
-task javadoc(type: Javadoc) {
-    failOnError  false
-    source = android.sourceSets.main.java.sourceFiles
-    classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
-    classpath += configurations.compile
-}
-
-artifacts {
-    archives sourcesJar
 }
